<resources>
    <string name="app_name">Help Me</string>
    <string name="create">Create your account to get all feature</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="please_enter_your_country_code_n_and_phone_number_for_verification">Please enter your Country Code \n and Phone number for verification</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="login">Login</string>
    <string name="have_not_account_register">Don\'t have an account? Register</string>
    <string name="let_s_get_started">Let\'s Get Started !</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_name">User Name</string>
    <string name="user_age">User Age</string>
    <string name="email">Email</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="we_have_sent_you_an_otp_n_for_phone_number_verification">We have sent you an OTP \n for phone number verification</string>
    <string name="didn_t_get_otp_resend">Didn\'t get OTP? Resend</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="updata_your_profile">Updata Your Profile</string>
    <string name="updata">Updata</string>
    <string name="country">Country</string>
    <string name="date">Date</string>
    <string name="death">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="affected">Affected</string>
    <string name="cronacases">Coronavirus</string>
    <string name="instructions">Instructions</string>
    <string name="google_map">Google map</string>
    <string name="plaese_wait">Please Wait</string>
    <string name="enter_verification_code">Please Enetr Verification Code</string>
    <string name="verifying_phone_number">Verifying Phone Number</string>
    <string name="resending_code">Resending Code</string>
    <string name="verifying_code">Verifying Code</string>
    <string name="login_succec">Login successful</string>
    <string name="location_notfound">Location Not Found</string>
    <string name="phone_is_required">Phone Number Is Required</string>
    <string name="please_enter_number">Please Enter a Valid Phone Number</string>
    <string name="username_is_required">User Name Is Required</string>
    <string name="userage_required">User Age Is Required</string>
    <string name="email_required">Email Is Required</string>
    <string name="please_enter_email">Please Enter a Valid Email !!!</string>
    <string name="select_gender">Please Select Gender</string>
    <string name="update_succec">Successful Update</string>
    <string name="failure_update">Failure Update</string>
    <string name="error">Error</string>
    <string name="verification_send">Verification Code Sent ...</string>
    <string name="phone_not_found">This Phone Number Not Found</string>
    <string name="profile">Profile</string>
    <string name="total">Total</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="logout">Logout</string>
    <string name="press_again">Press back again to exit</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="hospital">Hospitals</string>
    <string name="add_diseases">Add Diseases</string>
    <string name="common_diseases">Common Diseases</string>
    <string name="treatmentsDiseases">Treatments</string>
    <string name="name_diseases">Name Diseases</string>
    <string name="addition_of_a_common_disease">Addition of a Common Disease</string>
    <string name="save">Save</string>
    <string name="the_treatment">The Treatment</string>
    <string name="the_description">The Description</string>
    <string name="the_name">The Name</string>
    <string name="press_again_toback">Press back again to back</string>
    <string name="add_done">Done</string>
    <string name="enable_gps">Please check that GPS is enabled</string>
    <string name="enable_gps_chrome">To determine your location more accurately, please make sure that (GPS) is enabled in the Google map app</string>
    <string name="already_exists">This number already exists</string>
    <string name="country_egypt">Egypt</string>
    <string name="delete">Delete</string>
    <string name="delete_success">Delete successful</string>
    <string name="delete_failed">Failed deletion</string>
</resources>