<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2942"
    tools:context=".Activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="10dp"
            android:theme="@style/ToolbarTheme"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center"
                android:text="@string/let_s_get_started"
                android:textColor="@color/white"
                android:textSize="@dimen/_30ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="@dimen/_2sdp"
                android:text="@string/create"
                android:textSize="@dimen/_12ssp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp"
                tools:ignore="MissingConstraints">

                <ProgressBar
                    android:id="@+id/progressCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/cv"
                    app:layout_constraintEnd_toEndOf="@id/cv"
                    app:layout_constraintStart_toStartOf="@id/cv"
                    app:layout_constraintTop_toTopOf="@id/cv"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">


                    <com.hbb20.CountryCodePicker
                        android:id="@+id/countryCodePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@drawable/gray_border"
                        android:padding="5dp"
                        app:ccp_defaultLanguage="ARABIC"
                        app:ccp_defaultPhoneCode="20"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_showFlag="true"
                        app:ccp_showFullName="true"
                        app:ccp_showNameCode="true"
                        tools:ignore="MissingClass" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/phone_number"
                        app:boxStrokeColor="@color/LigtGreen"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_local_phone_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/user_name"
                        app:boxStrokeColor="@color/LigtGreen"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            tools:ignore="TextContrastCheck,TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/user_age"
                        app:boxStrokeColor="@color/LigtGreen"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_edit_note_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userAge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/email"
                        app:boxStrokeColor="@color/LigtGreen"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_email_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            tools:ignore="TextContrastCheck,TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/choose_gender"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:background="@drawable/gray_border"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="9dp">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:text="@string/female" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/continueRegister"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:background="@drawable/bt_uidesign"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>