<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:layout_marginBottom="@dimen/_10sdp"
    tools:context=".Activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_screen_image" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/verify_your_number"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_image" />

        <TextView
            android:id="@+id/login_desc"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/please_enter_your_country_code_n_and_phone_number_for_verification"
            android:textAlignment="center"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title" />

        <EditText
            android:id="@+id/countryCodeText"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/text_input_bg"
            android:ems="3"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="+20"
            android:inputType="number|textPhonetic"
            android:maxEms="3"
            android:maxLength="3"
            android:padding="@dimen/_13sdp"
            android:text="+20"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_desc" />

        <EditText
            android:id="@+id/phoneNumberText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/text_input_bg"
            android:ems="11"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/your_phone_number"
            android:inputType="phone"
            android:maxEms="11"
            android:maxLength="11"
            android:padding="@dimen/_12sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/countryCodeText"
            app:layout_constraintTop_toBottomOf="@+id/login_desc" />


        <Button
            android:id="@+id/generateBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@drawable/bt_uidesign_login"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/userRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberText" />

        <TextView
            android:id="@+id/userRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/have_not_account_register"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/generateBtn"
            tools:ignore="MissingConstraints" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/userRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="Working ..."
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>