<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2942"
    tools:context=".Activity.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="10dp"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:targetApi="lollipop" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:gravity="center"
        android:id="@+id/title_Updata"
        android:text="@string/updata_your_profile"
        android:textColor="@color/white"
        android:textSize="@dimen/_28ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="MissingConstraints" />

    <ScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_Updata"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp"
            tools:ignore="MissingConstraints">

            <ProgressBar
                android:id="@+id/progressCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/cv"
                app:layout_constraintEnd_toEndOf="@id/cv"
                app:layout_constraintStart_toStartOf="@id/cv"
                app:layout_constraintTop_toTopOf="@id/cv"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/user_name"
                    app:boxStrokeColor="@color/LigtGreen"
                    app:endIconMode="clear_text"
                    app:shapeAppearance="@style/Rounded"
                    app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/user_age"
                    app:boxStrokeColor="@color/LigtGreen"
                    app:endIconMode="clear_text"
                    app:shapeAppearance="@style/Rounded"
                    app:startIconDrawable="@drawable/ic_baseline_edit_note_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/email"
                    app:boxStrokeColor="@color/LigtGreen"
                    app:endIconMode="clear_text"
                    app:shapeAppearance="@style/Rounded"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/phone_number"
                    app:boxStrokeColor="@color/LigtGreen"
                    app:shapeAppearance="@style/Rounded"
                    app:startIconDrawable="@drawable/ic_baseline_local_phone_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/continueRegister"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:background="@drawable/bt_uidesign"
                    android:gravity="center"
                    android:text="@string/updata"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>