<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    tools:context=".Fragment.InstructionsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressDiseases"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorRed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:text="@string/common_diseases"
                android:textColor="#2D2942"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:background="@null" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleDiseases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_4sdp"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/name_diseases"
                        android:textColor="#2D2942"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_baseline_sports_volleyball_24" />

                    <TextView
                        android:id="@+id/descriptionDiseases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:padding="@dimen/_10sdp"
                        android:scrollHorizontally="true"
                        android:textColor="#2D2942"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_4sdp"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/treatmentsDiseases"
                        android:textColor="#2D2942"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_baseline_sports_volleyball_24" />

                    <TextView
                        android:id="@+id/treatmentsDiseases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:padding="@dimen/_10sdp"
                        android:textColor="#2D2942"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>